[metadata]
name = lightuptraining
description = Control your smart lights with your workout data
author = Marcel Blijleven
license = MIT
license_file = LICENSE
platforms = unix, linux, osx
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages =
    lightuptraining
install_requires =
    pyusb>=1.2
    rich>=10
python_requires = >= 3.7
package_dir =
    =src
zip_safe = no

[options.entry_points]
console_scripts =
    lightuptraining-setup = lightuptraining.scripts.setup:configure_application

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
lightuptraining = py.typed

[flake8]
max-line-length = 160
max-complexity = 8
inline-quotes = single
avoid-escape = False
multiline-quotes = """
